<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogLogout"
    android:layout_width="match_parent"
    android:layout_height="160dp">

    <Button
        android:id="@+id/buttonDialogNo"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorGray"
        android:text="@string/no"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialog" />

    <Button
        android:id="@+id/buttonDialogYes"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/yes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialog" />

    <TextView
        android:id="@+id/textViewDialog"
        android:layout_width="325dp"
        android:layout_height="36dp"
        android:layout_marginTop="34dp"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>






